# ai-agent-orchestration

./: .gitignore  README.md
.github/workflows/: ci.yml  publish-images.yml
backend/: Dockerfile  conftest.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: agents.py  auth.py
backend/app/core/: security.py
backend/app/services/: __init__.py  agent_manager.py  messaging.py  persistence.py  runtime.py  slack_messenger.py  workflow_runner.py
backend/app/workflows/: registry.py  slack_broadcast.py  two_agent_conversation.py
backend/tests/: test_agent_manager.py  test_agents_api.py  test_auth.py  test_messaging.py  test_sqlite_persistence.py  test_workflow_runner.py
connectors/: __init__.py
connectors/autogen/: README.md  autogen_client.py
connectors/openai/: README.md  openai_client.py
connectors/slack/: README.md  slack_client.py
docs/: api.md  architecture.md  demo.md  getting_started.md  roadmap.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx
infra/: README.md  docker-compose.yml
infra/terraform/: README.md  main.tf
