[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiagent-backend"
version = "0.0.1"
description = "Backend package for AIAgentOrchestration"
authors = [ { name = "AIAgentOrchestration" } ]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["app"]
